Allowed fullscreen modals via resize event handler to fix screens being cut off, created crude wireframe for omni terminal

--- a/src/components/styles/Marketing.css
+++ b/src/components/styles/Marketing.css
@@ -504,3 +504,21 @@
 
 	}
 }
+
+@media (max-width: 700px) {
+	.hero-header-1 {
+		font-size: 2.2em;
+	}
+	.hero-header-2 {
+		font-size: 2.2em;
+	}
+}
+
+@media (max-width: 320px) {
+	.hero-header-1 {
+		font-size: 1.65em;
+	}
+	.hero-header-2 {
+		font-size: 1.65em;
+	}
+}
